the new installation with docker

--- a/.env
+++ b/.env
@@ -7,7 +7,8 @@ VITE_API_URL=http://localhost:8000/api
 COMPANY_NAME="Auction "
 
 # Django configuration
-SECRET_KEY="se-taoxrpynkl9=s3u7dx$*pme3g%av42!($^*z^1n#mot6Ww8>K!wsEYye,^{[nDlFq%0CcEZ.9N$2@{G.emGDF9DjrooEJS8vJ3$yCh2[KwLJ^9p%S2"
+SECRET_KEY="k#&b9z!u5@q8x*f2(c1g)h0j_l3m-p4o+n7i=s6e_r1t@y2u!i3o(p4a#s5d&f6g*h7j)k8l_m9n0b_v1c2x3z"
+
 
 DEBUG=True
 ALLOWED_HOSTS='localhost,127.0.0.1'
