--- a/.env
+++ b/.env
@@ -15,6 +15,9 @@ ALLOWED_HOSTS='localhost,127.0.0.1'
 DJANGO_SETTINGS_MODULE=back.settings
 
 # Email settings
+EMAIL_BACKEND='django.core.mail.backends.smtp.EmailBackend'
+
+
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
