the new updates

--- a/.env
+++ b/.env
@@ -7,8 +7,7 @@ VITE_API_URL=http://localhost:8000/api
 COMPANY_NAME="Auction "
 
 # Django configuration
-SECRET_KEY="k#&b9z!u5@q8x*f2(c1g)h0j_l3m-p4o+n7i=s6e_r1t@y2u!i3o(p4a#s5d&f6g*h7j)k8l_m9n0b_v1c2x3z"
-
+SECRET_KEY="am^]Wq$$86Q|#XNl>QV(.^h.33,dsX125e:R]mxU08x$$G6WCbskam^]Wq$$86Q|#XNl>QV(.^h.33,dsX125e:R]mxU08x$$G6WCbskam^]Wq$$86Q|#XNl>QV(.^h.33,dsX125e:R]mxU08x$$G6WCbsk"
 
 DEBUG=True
 ALLOWED_HOSTS='localhost,127.0.0.1'
