--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tailwindcss/vite": "^4.0.0",
+		"autoprefixer": "^10.4.21",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^3.0.0",
@@ -36,6 +37,7 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"chart.js": "^4.4.9",
 		"leaflet": "^1.9.4"
 	},
 	"overrides": {
