--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -11,6 +11,7 @@ click-repl==0.3.0
 django==5.2
 django-cors-headers==4.7.0
 django-filter==25.1
+django-ratelimit==4.1.0
 django-redis==5.4.0
 djangorestframework==3.16.0
 djangorestframework-simplejwt==5.5.0
