--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     image: redis:7-alpine
     container_name: auction_redis
     ports:
-      - "6379:6379"
+      - "6380:6379"  
     volumes:
       - redis_data:/data
     restart: unless-stopped
@@ -52,7 +52,7 @@ services:
     environment:
       - DEBUG=true
       - ENVIRONMENT=development
-      - REDIS_URL=redis://redis:6379/0
+      - REDIS_URL=redis://redis:6379/0  # This stays the same (internal container communication)
     depends_on:
       - db
       - redis
