--- a/front/package.json
+++ b/front/package.json
@@ -34,7 +34,8 @@
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
-		"vite": "^6.2.6"
+		"vite": "^6.2.6",
+		"vite-plugin-pwa": "^1.0.0"
 	},
 	"dependencies": {
 		"chart.js": "^4.4.9",
