the pwa is not working

--- a/front/static/manifest.json
+++ b/front/static/manifest.json
@@ -1,10 +1,4 @@
-cd front
 
-# If manifest.json is not in static/, move it there
-ls static/manifest.json || echo "manifest.json missing from static/"
-
-# If missing, create it in static/
-cat > static/manifest.json << 'EOF'
 {
 	"name": "Real Estate Auction Platform",
 	"short_name": "Auction",
@@ -18,54 +12,27 @@ cat > static/manifest.json << 'EOF'
 	"categories": ["business", "Auction", "real estate"],
 	"lang": "en",
 	"icons": [
-		{
-			"src": "/icons/icon-72x72.png",
-			"sizes": "72x72",
-			"type": "image/png",
-			"purpose": "any"
-		},
-		{
-			"src": "/icons/icon-96x96.png",
-			"sizes": "96x96",
-			"type": "image/png",
-			"purpose": "any"
-		},
-		{
-			"src": "/icons/icon-128x128.png",
-			"sizes": "128x128",
-			"type": "image/png",
-			"purpose": "any"
-		},
-		{
-			"src": "/icons/icon-144x144.png",
-			"sizes": "144x144",
-			"type": "image/png",
-			"purpose": "any"
-		},
-		{
-			"src": "/icons/icon-152x152.png",
-			"sizes": "152x152",
-			"type": "image/png",
-			"purpose": "any"
-		},
-		{
-			"src": "/icons/icon-192x192.png",
-			"sizes": "192x192",
-			"type": "image/png",
-			"purpose": "any maskable"
-		},
-		{
-			"src": "/icons/icon-384x384.png",
-			"sizes": "384x384",
-			"type": "image/png",
-			"purpose": "any"
-		},
-		{
-			"src": "/icons/icon-512x512.png",
-			"sizes": "512x512",
-			"type": "image/png",
-			"purpose": "any maskable"
-		}
+    {
+      "src": "pwa-64x64.png",
+      "sizes": "64x64",
+      "type": "image/png"
+    },
+    {
+      "src": "pwa-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "pwa-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "maskable-icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
 	],
 	"shortcuts": [
 		{
@@ -82,4 +49,3 @@ cat > static/manifest.json << 'EOF'
 		}
 	]
 }
-EOF
