--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,9 @@ services:
       - DEBUG=true
       - ENVIRONMENT=development
       - REDIS_URL=redis://redis:6379/0
+      # Fix API URL references
+      - ALLOWED_HOSTS=localhost,127.0.0.1,backend,auction_backend,0.0.0.0
+      - CORS_ALLOWED_ORIGINS=http://localhost:5173,http://127.0.0.1:5173,http://localhost:7500,http://127.0.0.1:7500
     depends_on:
       db:
         condition: service_healthy
@@ -77,6 +80,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - NODE_ENV=development
+      # Fix these API references to match your backend port
       - VITE_API_BASE_URL=http://localhost:8451/api
       - VITE_WS_BASE_URL=ws://localhost:8451/ws
     restart: unless-stopped
