--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - NODE_ENV=development
-      # Fix these API references to match your backend port
+      # FIXED: WebSocket URL should match backend routing pattern
       - VITE_API_BASE_URL=http://localhost:8451/api
       - VITE_WS_BASE_URL=ws://localhost:8451/ws
     restart: unless-stopped
