the latest design

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Environment variables
-.env
-.env.*
-!.env.example
+# .env
+# .env.*
+# !.env.example
 
 # Node.js
 node_modules/
@@ -62,10 +62,10 @@ coverage/
 errors.md
 
 # Local development files
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# .env.local
+# .env.development.local
+# .env.test.local
+# .env.production.local
 
 # Django static files
 staticfiles/
