--- a/front/ts.config.json
+++ b/front/ts.config.json
@@ -7,7 +7,7 @@
       "resolveJsonModule": true,
       "skipLibCheck": true,
       "sourceMap": true,
-      "strict": true,
+      "strict": false,
       "moduleResolution": "bundler",
       "target": "ES2022",
       "module": "ES2022",
