--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# Updated docker-compose.yml
 services:
   db:
     image: postgres:15-alpine
@@ -12,7 +13,7 @@ services:
       - "5433:5432"
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-postgres} -d ${DB_NAME:-auction}"]
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER:-ringo} -d ${DB_NAME:-auction}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -53,6 +54,15 @@ services:
       - DEBUG=${DEBUG:-false}
       - ENVIRONMENT=${ENVIRONMENT:-production}
       - REDIS_URL=redis://redis:6379/0
+      # ✅ FIXED: Add PostgreSQL configuration
+      - USE_POSTGRESQL=true
+      - USE_REDIS_CACHE=true
+      - USE_CACHE_SESSIONS=true
+      - DB_NAME=auction
+      - DB_USER=ringo
+      - DB_PASSWORD=@fric@9619
+      - DB_HOST=db
+      - DB_PORT=5432
       # Fix API URL references
       - ALLOWED_HOSTS=${ALLOWED_HOSTS:-localhost,127.0.0.1,backend,auction_backend}
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-http://localhost:5173,http://127.0.0.1:5173,http://localhost:7500,http://127.0.0.1:7500}
@@ -88,7 +98,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - NODE_ENV=development
-      # FIXED: WebSocket URL should match backend routing pattern
+      # ✅ FIXED: WebSocket URL should match backend routing pattern
       - VITE_API_BASE_URL=http://localhost:8451/api
       - VITE_WS_BASE_URL=ws://localhost:8451/ws
     restart: unless-stopped
